--- a/index.html
+++ b/index.html
@@ -510,7 +510,10 @@
     border-color: black;
    }
    .social {
-     border-bottom:1px;
+     border-top:0px;
+    border-left:0px;
+    border-right:0px;
+    border-bottom:0px;
     border-style: solid;
     border-color: #2F3336;
    }
