--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="https://yyy.ugo.si/img/apple-touch-icon.png">
 	<link rel="shorcut icon" type="image/x-icon" href="https://yyy.ugo.si/img/fv.ico">
   <link rel="icon" type="image/x-icon" href="https://yyy.ugo.si/img/fv.ico"/>
-  <meta http-equiv="refresh" content="0; URL=https://yyy.ugo.si/home" />
+  <meta http-equiv="refresh" content="0; URL=https://soko.eu.org" />
 </head>
 
 </html> 
